# level3

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  run.sh  schema.sql
.claude/: settings.local.json
docs/: implementation-plan.md  product-brief.md
src/level3/: agent.py  bootstrap_tools.py  capability_loader.py  config.py  db.py  llm.py  main.py
static/: index.html
